# plugin_gform

./: .gitignore  CMakeLists.txt  gs_to_mongo.py
Grafana/: server.js
Plugin/include/: mads_common.hpp
Plugin/src/: fetch_gsheet.py  source_gsheet.cpp
src/: gsheet_c_wrapper.cpp  gsheet_c_wrapper.hpp  source_gsheet.cpp  test_gsheet.cpp
